--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,7 +15,7 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --doc-sidebar-width: 400px;
+  --doc-sidebar-width: 400px !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -28,5 +28,5 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --doc-sidebar-width: 400px;
+  --doc-sidebar-width: 400px !important;
 }
